--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/css.css">
   </head>
   <body>
-    <!-- BLOCK 1 HEADER -->
+      <!-- BLOCK 1 HEADER -->
+<div class="wrapper">
     <div class="header">
       <div class="company-logo">
         <a href="index.html" class="logo">COMPANY LOGO</a>
@@ -26,15 +27,13 @@
       <div class="main-headline">
         <h1 class="head-line">Main Headline Here</h1>
         <p class="head-content">Smaller header text here.Lorem insum dolor sit amet,consecter.Lorem insumdolor sit amet, consecter.</p>
-        <form action="/" method="post" class="head-button">
-          <p >
-            <input type="submit" value="Call-to-Action Button Here">
-          </p>
-        </form>
+          <div class="head-button" >
+            <button>Call-to-Action Button Here</button>
+          </div>
       </div>
         <p class="big-img"><img src="images/img_big.png" alt="Main Headline Here" ></p>
     </div>
-
+</div>
     <!-- BLOCK 3 MEDIA -->
 
     <!-- BLOCK 4 SUBSCRIBE -->
