--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
       <!-- BLOCK 1 HEADER -->
-<div class="wrapper">
+  <div class="head-wrap">
     <div class="header">
       <div class="company-logo">
         <a href="index.html" class="logo">COMPANY LOGO</a>
@@ -22,7 +22,9 @@
          <input type="search" class="head-search">
       </div>
     </div>
+  </div><!--end head-wrap-->
     <!-- BLOCK 2 CONTEINER TABS -->
+  <div class="conteiner-wrap">
     <div class="conteiner-tabs">
       <div class="main-headline">
         <h1 class="head-line">Main Headline Here</h1>
@@ -33,7 +35,7 @@
       </div>
         <p class="big-img"><img src="images/img_big.png" alt="Main Headline Here" ></p>
     </div>
-</div>
+ </div><!--end conteiner-wrap-->
     <!-- BLOCK 3 MEDIA -->
 
     <!-- BLOCK 4 SUBSCRIBE -->
